--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 *:after {
   padding: 0px;
   margin: 0px;
+  box-sizing: border-box;
 }
 
 :root {
